Working on implementing interactive dropdown list and addressing several styling concerns on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <script src="<%= BASE_URL %>mapdata.js"></script>
     <script src="<%= BASE_URL %>worldmap.js"></script>
+    <script src="<%= BASE_URL %>list.js"></script>
     <title>Aviko World Map Example</title>
   </head>
   <body>
