--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <script src="<%= BASE_URL %>mapdata.js"></script>
     <script src="<%= BASE_URL %>worldmap.js"></script>
-    <script src="<%= BASE_URL %>list.js"></script>
-    <title>Aviko World Map Example</title>
+    <title>World Map</title>
   </head>
   <body>
     <noscript>
